# sbn-survey-image-service

./: .env-template  .gitignore  .gunicorn.config.py  .pylintrc  .readthedocs.yml  LICENSE  _activate  _add_atlas  _add_neat  _add_neat_example  _develop_apis  _gunicorn_manager  _initial_setup.sh  _install_fitscut  _precommit_hook  _sbnsis  _setup_development  _setup_development.sh  _setup_production.sh  _test  _tests  pyproject.toml  readme.md  requirements.txt  requirements.vscode.txt  setup.py
docs/: adding-data.rst  api-guide.rst  conf.py  development.rst  index.rst  install.rst  service.rst
examples/avm-js/: README.md  avm.js  package-lock.json  package.json  test.js
logging/: logrotate.config
sbn_survey_image_service/: __init__.py  _version.py  app.py  env.py  exceptions.py  logging.py
sbn_survey_image_service/api/: app.py  images.py  openapi.yaml  query.py  summary.py
sbn_survey_image_service/config/: __init__.py  env.py  exceptions.py  logging.py
sbn_survey_image_service/data/: __init__.py  add.py  core.py  test.py
sbn_survey_image_service/data/test/: generate.py  template.xml  test_data.py
sbn_survey_image_service/models/: __init__.py  base.py  harvest_log.py  image.py
sbn_survey_image_service/models/test/: test_models.py
sbn_survey_image_service/scripts/: sbnsis.py
sbn_survey_image_service/services/: __init__.py  database_provider.py  image.py  label.py  metadata.py  network.py
sbn_survey_image_service/test/: test_avm_xmp.py  test_services.py
tests/: test_sth.py
