[project]
name = "sbn-survey-image-service"
description = "Serves images and cutouts via REST API."
readme = "readme.md"
authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
license = { text = "BSD 3-Clause License" }
dynamic = ["version"]
requires-python = ">= 3.10"

dependencies = [
    "astropy>=6.0",
    "connexion[flask,swagger-ui,uvicorn]~=3.0",
    "gunicorn~=21.2",
    "pds4_tools==1.3",
    "pytest-remotedata>=0.4",
    "python-dotenv~=1.0",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
recommended = ["psycopg2-binary>=2.8"]
dev = ["autopep8", "mypy", "pycodestyle", "pytest>=7.0", "pytest-cov>=3.0"]

[project.urls]
homepage = "https://github.com/Small-Bodies-Node/sbn-survey-image-service"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "sbn_survey_image_service/_version.py"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]

[project.scripts]
sbnsis = "sbn_survey_image_service.scripts.sbnsis:__main__"
sbnsis-add = "sbn_survey_image_service.data.add:__main__"
