[project]
name = "sbn-survey-image-service"
description = "Serves images and cutouts via REST API."
readme = "readme.md"
authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
license = { text = "BSD 3-Clause License" }
dynamic = ["version"]
requires-python = ">=3.11"

dependencies = [
    "astropy>=6.0",
    "fsspec>=2024.10.0",
    "aiohttp>=3.10",
    "requests>=2.32",
    "Pillow>=11.0",
    "connexion[flask,swagger-ui,uvicorn]~=3.2",
    "gunicorn~=23.0",
    "pds4_tools==1.4",
    "pytest-remotedata>=0.4",
    "python-dotenv~=1.0",
    "reproject>=0.14",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
recommended = ["psycopg2-binary>=2.8"]
dev = ["black", "mypy", "pycodestyle"]
test = ["pytest>=7.0", "pytest-cov>=3.0"]
docs = ["sphinx", "sphinx-automodapi", "numpydoc"]

[project.urls]
homepage = "https://github.com/Small-Bodies-Node/sbn-survey-image-service"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "sbn_survey_image_service/_version.py"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]

[project.scripts]
sbnsis = "sbn_survey_image_service.scripts.sbnsis:__main__"
sbnsis-add = "sbn_survey_image_service.data.add:__main__"
